--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,9 @@ layout: default
 {% include comments.html %}
 
 <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript"
+ src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <script type="text/javascript">
 $(function(){
   $(document).keydown(function(e) {
